fix: correctif de l'affichage de l'error-box correctif pour l'affichage de la boite de message d'erreur qui était visible en permanence

--- a/style/style.css
+++ b/style/style.css
@@ -58,7 +58,7 @@ li:nth-child(1n + 6){
     display: none;
 }
 
-.error-box{
+.error-box--active{
     position: absolute;
     top: 20vh;
     left:25vw;
